[gd_scene load_steps=2 format=3 uid="uid://dolkvgdo4fak7"]

[ext_resource type="Script" path="res://scripts/powerups_spawner.gd" id="1_wavkp"]

[node name="powerups_spawner" type="Node2D"]
script = ExtResource("1_wavkp")

[node name="spawn_positions" type="Node2D" parent="."]

[node name="spawnpos0" type="Marker2D" parent="spawn_positions"]
position = Vector2(186, 337)

[node name="spawnpos1" type="Marker2D" parent="spawn_positions"]
position = Vector2(385, 115)

[node name="spawnpos2" type="Marker2D" parent="spawn_positions"]
position = Vector2(1125, 629)

[node name="spawnpos3" type="Marker2D" parent="spawn_positions"]
position = Vector2(957, 303)

[node name="spawnpos4" type="Marker2D" parent="spawn_positions"]
position = Vector2(587, 542)

[node name="spawnpos5" type="Marker2D" parent="spawn_positions"]
position = Vector2(100, 108)

[node name="spawnpos6" type="Marker2D" parent="spawn_positions"]
position = Vector2(471, 362)

[node name="spawnpos7" type="Marker2D" parent="spawn_positions"]
position = Vector2(164, 628)

[node name="spawnpos8" type="Marker2D" parent="spawn_positions"]
position = Vector2(715, 109)

[node name="spawnpos9" type="Marker2D" parent="spawn_positions"]
position = Vector2(892, 493)

[node name="spawnpos10" type="Marker2D" parent="spawn_positions"]
position = Vector2(1086, 106)

[node name="spawn_timer" type="Timer" parent="."]
autostart = true

[node name="life_span_timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true
